# mcp-server-iiot

./: README.md  pyproject.toml
mcp_server_iiot/: server.py
