[project]
name = "mcp-server-iiot"
version = "0.0.1"
readme = "README.md"

requires-python = ">=3.10"

dependencies = [
]

[project.urls]
Homepage = "https://github.com/mcp-server/mcp-server-iiot"
Repository = "https://github.com/mcp-server/mcp-server-iiot"
Documentation = "https://github.com/mcp-server/mcp-server-iiot#readme"

[tool.ruff]
line-length = 120
